02-k3s-cluster/alb.tf
# -----------------------------------------------------------------------------
# ALB
# -----------------------------------------------------------------------------
resource "aws_lb" "main" {
  name               = "Firstproject-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = local.public_subnet_ids
  tags = {
    Name = "FirstProject-ALB"
  }
}

resource "aws_lb_target_group" "web_80" {
  name     = "k3s-web-tg-80"
  port     = 80
  protocol = "HTTP"
  vpc_id   = local.vpc_id
}

resource "aws_lb_target_group_attachment" "web_1" {
  target_group_arn = aws_lb_target_group.web_80.arn
  target_id        = aws_instance.web_worker_1.id
  port             = 80
}


resource "aws_lb_target_group_attachment" "web_2" {
  target_group_arn = aws_lb_target_group.web_80.arn
  target_id        = aws_instance.web_worker_2.id
  port             = 80
}

resource "aws_lb_listener" "front_end" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.web_80.arn
  }
}
